--- a/day-night/index.html
+++ b/day-night/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>Day and night in the Creation</title>
         <link rel="stylesheet" href="../css/style.css">
         
     </head>
@@ -68,17 +68,17 @@
 
 <p>Much has been said about how there can be ‘day’ and ‘night’ during the Creation if the sun wasn't created until the fourth day.</p>
 
-<p>On this, I would simply point out that the Genesis explicitly defines what is meant by ‘day’, in (Genesis, 1:5):</p>
+<p>This essay argues that Genesis 1:5's explicit naming of ‘day’ (<i>yom</i>) and ‘night’ (<i>laylah</i>) resolves the apparent chronological issue without requiring a solar source, and that the text allows for non‑24‑hour divine ‘days’.</p>
+
+<p>To see this, note that Genesis 1:5 explicitly defines what is meant by ‘day’ and ‘night’:</p>
 
 <p><div class="quote">
     <sup class="footnote-number">5</sup>God called the light ‘day’, and the darkness<br>
     He called ‘night’.
 </div></p>
 
-<p>Taking the Bible literally seems to solve the issue. God
-created light, and He called it ‘day’. Darkness, on the
-other hand, was called ‘night’. This is consistent with the
-fact that in Biblical times, the day end was marked by sunset, rather than midnight.</p>
+<p>
+The Hebrew terms <i>yom</i> (day) and <i>laylah</i> (night) here serve a functional role rather than an astronomical one, reflecting ancient Near Eastern reckoning from sunset to sunset. Taking the Bible literally seems to solve the issue. God created light, and He called it ‘day’. Darkness, on the other hand, was called ‘night’.</p>
 
 <p>Nowadays, the source of light that separates days is the
 sun. During the first few days of creation, the source had
@@ -87,10 +87,14 @@ the point is that this source of light defines the day.</p>
 
 <p>It also follows that there is no reason to believe the
 first few days of the Creation were 24 hours in length.
+Augustine himself cautioned against strict literal chronology,
+noting that divine time transcends human measurements<sup class='footnote-number'><a href='#footnote-1'>1</a></sup>.
 It could have been longer, or even shorter. There’s not
 even a reason to believe that the length of the first days
 of the Creation were the same: each day could have had
-a different duration.</p>
+a different duration.</p><h3>Notes</h3>
+<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Augustine, <i>Confessions</i>.</p>
+
             </section>
         </main>
 
