--- a/information-loss/index.html
+++ b/information-loss/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>Information loss in speech across languages</title>
         <link rel="stylesheet" href="../css/style.css">
         
     </head>
@@ -66,13 +66,15 @@
                 
                 <p class="date">26 Apr 2023</p>
 
-<p>It is evident to anyone exposed to different languages that not all languages are spoken at the same speed. English speakers, for instance, talk slower than Spanish speakers.</p>
+<p>It is evident to anyone exposed to different languages that not all languages are spoken at the same speed. English speakers, for instance, talk more slowly than Spanish speakers.</p>
 
 <p>However, I once read an article that showed that despite the disparity of speed, measured in syllables per second, the amount of information transmitted per second is roughly constant across languages.<sup class='footnote-number'><a href='#footnote-1'>1</a></sup> This seemed very interesting to me.</p>
 
 <p>I was then thinking about the robustness to mishearing across languages. In other words, if a part of a sentence is misheard – because a word was mispronounced, for instance – is the meaning of the sentence roughly intelligible?</p>
 
-<p>My limited knowledge of languages – I only speak three, insignificant compared to the number of languages spoken – doesn’t allow me to have a good overall idea of where languages stand on this. However, I suspect that English is well-placed in this regard. At least compared to Spanish, English is more robust to mishearing individual words</p>
+<p>Psycholinguists frame this as intelligibility under masking noise or lexical deletion, a property that can be measured experimentally<sup class='footnote-number'><a href='#footnote-2'>2</a></sup>.</p>
+
+<p>My limited knowledge of languages – I only speak three, insignificant compared to the number of languages spoken worlwide – doesn’t allow me to have a good overall idea of where languages stand on this. However, I suspect that English is well-placed in this regard. At least compared to Spanish, English is more robust to mishearing individual words</p>
 
 <p>When part of the sentence is mispronounced or hasn’t been heard properly, it is usually individual words that are dropped. The habit of adding information about subject, action, tense etc to the verb in Spanish makes understanding the sentence more difficult when a word is dropped as a consequence of not understanding it. Consider for example the sentences</p>
 
@@ -92,8 +94,22 @@
 
 <p><b>(En’’’)</b> I will [...] to Paris.</p>
 
-<p>In <b>(En’)</b>, no meaning is really lost. In <b>(En’’)</b> and <b>(En’’’)</b>, some meaning is lost, but part of the meaning is still kept. With the aid of the context of the conversation, a fluid conversation can be had without misunderstandings. This is why it’s easier to understand foreigners with a difficult English accent than foreigners with a difficult Spanish accent.</p><h3>Notes</h3>
-<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Coupé, Christophe, et al., <i>Different languages, similar encoding efficiency: Comparable information rates across the human communicative niche</i> (Science advances 5.9: eaaw2594, 2019)</p>
+<p>In <b>(En’)</b>, no meaning is really lost. In <b>(En’’)</b> and <b>(En’’’)</b>, some meaning is lost, but part of the meaning is still kept. With the aid of the context of the conversation, a fluid conversation can be had without misunderstandings. This is why it’s easier to understand foreigners with a difficult English accent than foreigners with a difficult Spanish accent.</p>
+
+<p>Further cross‑linguistic examples support the same pattern:</p>
+
+<p><b>(It)</b> Andrò a Parigi.</p>
+
+<p><b>(Jp)</b> パリに行くよ。(Pari ni iku yo).</p>
+
+<p>In Italian, the synthetic <i>andrò</i> once again fuses person, tense and lexical stem, whereas in Japanese the lexical verb 行く (<i>iku</i>, “to go”) carries only the action, with subject left implicit and destination marked by the postposition に. If 行く is masked, listeners still recover “...to Paris”, yet must infer the verb from context.</p>
+
+<p>Typologists have linked such “information packaging” differences to morphological type: analytic languages like English distribute grammatical categories across separate words, while fusional languages like Spanish compress them<sup class='footnote-number'><a href='#footnote-3'>3</a></sup></p>
+
+<p>Taken together, these observations suggest that while languages equalise average information rate, they vary in their robustness to information loss, like lexical deletion.</p><h3>Notes</h3>
+<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Coupé, Christophe, et al., <i>Different languages, similar encoding efficiency: Comparable information rates across the human communicative niche</i> (Science advances 5.9: eaaw2594, 2019).</p>
+<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> See for example C. Connine, C. Clifton and A. Cutler, <i>Effects of lexical stress on phonetic categorization</i> (Phonetica, 44(3): 133-146, 1987).</p>
+<p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> P. Trudgill, <i>Sociolinguistic Typology: Social Determinants of Linguistic Complexity</i>, (Oxford University Press, 2011).</p>
 
             </section>
         </main>
