--- a/maximal-rights/index.html
+++ b/maximal-rights/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>On maximal systems of rights </title>
         <link rel="stylesheet" href="../css/style.css">
         
 <script type="text/javascript" id="MathJax-script" async
