--- a/omnipotence/index.html
+++ b/omnipotence/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>Is the Christian God really omnipotent?</title>
         <link rel="stylesheet" href="../css/style.css">
         
     </head>
@@ -64,7 +64,7 @@
             <section>
                 <h2 id="page-title">Is the Christian God really omnipotent?</h2>
                 
-                <p class="date">18 Feb 2024</p>
+                <p class="date">18 Feb 2023</p>
 
 <p>Omnipotence, as well as the related properties of
 omniscience and omnipresence, is part of the Christian
@@ -76,7 +76,7 @@ no doubt His powers, according to the Bible, are great –
 but I don’t think He is technically omnipotent.
 The extent of God’s powers is discussed in various
 parts of the Bible, but they all seem to be in accordance
-to (Psalm 115:3):</p>
+to Psalm 115:3, later repeated in Psalm 135:6:</p>
 
 <p><div class="quote">
     <sup class="footnote-number">3</sup>Our God is in the heavens;<br>
@@ -106,7 +106,7 @@ them.</p>
 the Bible is simply overreaching: it is assigning
 attributes to God that are not deduced from it.</p>
 
-<p>This literal interpretation of (Psalm 115:3), and others
+<p>This literal interpretation of Psalm 115:3, and others
 similar to it, also solves the logical paradox of whether
 God can create an immovable rock. At first glance, assuming
 God is omnipotent, this is a paradox: if He wasn't
@@ -114,7 +114,7 @@ able to, He wouldn't be omnipotent; if He is omnipotent,
 He should be able to create it. But God should be able to
 move it too – meaning it is not really an immovable rock.</p>
 
-<p>In view of the given interpretation of (Psalm 115:3), we
+<p>In view of the given interpretation of Psalm 115:3, we
 see this needs not be a paradox. God can do anything
 He pleases. If He cannot create an immovable rock, it is
 because He doesn't please to. If he can create one, then
