--- a/punishing-pollution/index.html
+++ b/punishing-pollution/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>Punishing an illicit activity, or the activity that facilitates it?</title>
         <link rel="stylesheet" href="../css/style.css">
         
     </head>
@@ -69,70 +69,30 @@
 <p>I was reading <i>Hot Money</i>, by Naomi Klein. There, the
 author advocates for stopping (or greatly reducing) pollution,
 which she (rightly, I believe) considers to be illicit.
-As part of the condemnation of pollution, she charges
-against fossil fuel-producing companies, advocating for
-punishing them. This, I believe, is a mistake, as whereas
+As part of the condemnation of pollution, she argues that
+fossil-fuel corporations warrant punitive measures commensurate
+with their contribution to climate risk. This, I believe, is a mistake, as whereas
 polluting is illicit activity, the business of these companies
 is not.</p>
 
-<p>As far as I know, the business of fossil fuel-producing
-companies consists of extracting the fossil fuel, possibly
-producing derivative products out of it (eg gasoline out
-of oil) and selling it. They don’t really pollute, as far I
-can tell – not, at least, beyond the typical business of
-its size. The extraction of fossil fuels might incur pollution,
-but the bulk of the overall pollution produced
-by the extracted fuel is not due to actions by the fossil
-fuel-producing company. The polluters are the buyers
-of these products. They are the ones releasing carbon to
-the atmosphere. They are the ones that should be punished.
-The fossil fuel-producing companies are not the
-ones committing the illicit act.</p>
+<p>
+Fossil-fuel companies principally extract raw hydrocarbons, refine them into marketable products such as gasoline, and sell these commodities to downstream users. The extraction and refining process generates measurable direct emissions<sup class='footnote-number'><a href='#footnote-1'>1</a></sup>. Nevertheless, the overwhelming share of climate-warming pollution occurs when consumers combust the fuel<sup class='footnote-number'><a href='#footnote-2'>2</a></sup>. The buyers are therefore the immediate emitters of carbon and, on Klein's “polluter-pays” account, the parties liable for sanction. By contrast, producers do not themselves release these downstream emissions<sup class='footnote-number'><a href='#footnote-3'>3</a></sup> and thus are not, strictly speaking, the agents committing the illicit act.</p>
 
-<p>The same applies to car manufacturers. Even though
-their product (assuming it’s not an electric car) does pollute
-when used, the act of producing and selling is a licit
-one. It is the end users – the drivers – the ones that should
-be punished.</p>
+<p>
+The same reasoning applies to manufacturers of internal-combustion vehicles. While the vehicles emit pollutants during operation, the manufacturing and sale of the automobile itself constitute licit commercial activities; it is the driver who activates the engine and releases exhaust gases.</p>
 
-<p>If you are willing to punish fossil fuel-producers because they
-facilitate the illicit act that is polluting, you
-are running into a slippery slope. If an engineering company
-supplies the oil-extracting machinery (specialised
-machinery only used for oil extraction) they are too facilitating
-the polluting, so they would also need to be punished. The
-same would apply to the steel manufacturing
-company that provided the steel to the engineering company – and so on.</p>
+<p>If policymakers extend liability to fossil-fuel producers merely because they facilitate pollution, they must confront a regress of complicity. The engineering firm supplying specialised drilling rigs, the steelmaker producing the rig's structural components, and even financial institutions providing capital could be deemed accessories, thereby diluting accountability<sup class='footnote-number'><a href='#footnote-4'>4</a></sup>.</p>
 
-<p>We should keep track of strict carbon accounting.
-However, the problem with how carbon accounting (assigning the
-amount of carbon emitted to an individual) is often done is double-counting.
-The same molecule of carbon is assigned to multiple parties.</p>
+<p>Rigorous, single-entry carbon accounting is essential for transparent climate governance. Yet current practice often double- or triple-counts the same tonne of CO₂ across multiple ledgers, allocating emissions to the producer, the transporter, and the consumer simultaneously.</p>
 
-<p>Say I buy an avocado that was grown in California.
-The avocado had to be grown and transported to the
-UK. Transatlantic transportation pollutes a lot. How
-much carbon should be attributed to me, in this carbon
-accounting?</p>
+<p>Consider an avocado grown in California and consumed in the United Kingdom. Life-cycle assessments allocate aviation and shipping emissions to several actors: the farmer, the logistics provider, the retailer, and the purchaser. Assigning identical molecules of CO₂ to four distinct agents violates elementary bookkeeping principles and inflates aggregate inventories.</p>
 
-<p>People tend to attribute the carbon emitted during
-transportation to me. But they also attribute it to the
-farmer, the transport company and the British grocery
-store. In other words, the same molecule of carbon was
-added to the carbon books of four parties. That is bad
-accounting.</p>
+<p>The correct procedure is straightforward: each tonne of CO₂ should appear once, in the ledger of the physical emitter. I emit nothing when simply purchasing the avocado; the trans-Atlantic carrier does. If pollution is illicit, moral culpability attaches to the emitter alone; entities that enable but do not themselves emit are not, in this narrow sense, acting unjustly.</p><h3>Notes</h3>
+<p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> This is called Scope 1 in the Greenhouse Gas Protocol.</p>
+<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> Called Scope 3.</p>
+<p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> Beyond Scope 1.</p>
+<p id='footnote-4'><sup class='footnote-number'><a href='#footnote-4'>4</a></sup> C. Kutz, <i>Complicity: Ethics and Law for a Collective Age</i> (Cambridge University Press, 2000).</p>
 
-<p>The reality is simple. A molecule of carbon should be
-added to the emitter’s book – and no one else’s. I didn’t
-emit any carbon when buying the avocado – the transport company did.
-If we see polluting as illicit or immoral,
-then I did nothing wrong – the transport company is in
-the wrong.</p>
-
-<p>Each molecule of carbon emitted to the atmosphere has
-an emitter. That person is responsible for this illicit act.
-Third parties that might have facilitated this polluting
-but haven’t themselves polluted are not acting unjustly.</p>
             </section>
         </main>
 
