--- a/books/index.html
+++ b/books/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>Books</title>
         <link rel="stylesheet" href="../css/style.css">
         
     </head>
