--- a/owned-by-all/index.html
+++ b/owned-by-all/index.html
@@ -43,7 +43,7 @@
         sizes="128x128"
         />
 
-        <title>Alvaro Rivas</title>
+        <title>Owned by no one, or owned by all?</title>
         <link rel="stylesheet" href="../css/style.css">
         
     </head>
