--- a/information-loss/index.html
+++ b/information-loss/index.html
@@ -104,7 +104,7 @@
 
 <p>In Italian, the synthetic <i>andrò</i> once again fuses person, tense and lexical stem, whereas in Japanese the lexical verb 行く (<i>iku</i>, “to go”) carries only the action, with subject left implicit and destination marked by the postposition に. If 行く is masked, listeners still recover “...to Paris”, yet must infer the verb from context.</p>
 
-<p>Typologists have linked such “information packaging” differences to morphological type: analytic languages like English distribute grammatical categories across separate words, while fusional languages like Spanish compress them<sup class='footnote-number'><a href='#footnote-3'>3</a></sup></p>
+<p>Typologists have linked such “information packaging” differences to morphological type: analytic languages like English distribute grammatical categories across separate words, while fusional languages like Spanish compress them<sup class='footnote-number'><a href='#footnote-3'>3</a></sup>.</p>
 
 <p>Taken together, these observations suggest that while languages equalise average information rate, they vary in their robustness to information loss, like lexical deletion.</p><h3>Notes</h3>
 <p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Coupé, Christophe, et al., <i>Different languages, similar encoding efficiency: Comparable information rates across the human communicative niche</i> (Science advances 5.9: eaaw2594, 2019).</p>
