--- a/information-loss/index.html
+++ b/information-loss/index.html
@@ -109,7 +109,7 @@
 <p>Taken together, these observations suggest that while languages equalise average information rate, they vary in their robustness to information loss, like lexical deletion.</p><h3>Notes</h3>
 <p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> Coupé, Christophe, et al., <i>Different languages, similar encoding efficiency: Comparable information rates across the human communicative niche</i> (Science advances 5.9: eaaw2594, 2019).</p>
 <p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> See for example C. Connine, C. Clifton and A. Cutler, <i>Effects of lexical stress on phonetic categorization</i> (Phonetica, 44(3): 133-146, 1987).</p>
-<p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> P. Trudgill, <i>Sociolinguistic Typology: Social Determinants of Linguistic Complexity</i>, (Oxford University Press, 2011).</p>
+<p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> P. Trudgill, <i>Sociolinguistic Typology: Social Determinants of Linguistic Complexity</i> (Oxford University Press, 2011).</p>
 
             </section>
         </main>
