--- a/owned-by-all/index.html
+++ b/owned-by-all/index.html
@@ -66,11 +66,11 @@
                 
                 <p class="date">10 Jan 2023</p>
 
-<p>Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of Honoré<sup class='footnote-number'><a href='#footnote-1'>1</a></sup>: a person owns an object if he possesses the bundle of rights over that object. A priori, an object may well have multiple owners. If there’s one and only one owner, it is said to be privately owned by him. If no person has the bundle of rights, it’s said to be unowned.</p>
+<p>Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of Honoré<sup class='footnote-number'><a href='#footnote-1'>1</a></sup>: a person owns an object if he possesses the bundle of rights over that object &mdash; rights like the right to possess, the right to use, the right to manage, etc. In principle, an object may well have multiple owners. If there’s one and only one owner, it is said to be privately owned by him. If no person has the bundle of rights, it’s said to be unowned.</p>
 
-<p>The “commons” are the natural resources that nature provides us: land, the air, water, trees, minerals, oil, etc. Nowadays, most of these are privately owned, or else coowned by groups of people. However, this wasn’t always the case. It is clear that, if we trace back the history of any natural resource, there was a time when it wasn’t privately owned. What was its state, then?</p>
+<p>The “commons” are the natural resources that nature provides us: land, the air, water, trees, minerals, oil, etc. Nowadays, most of these are privately owned, or else co-owned by groups of people. However, this wasn’t always the case. It is clear that, if we trace back the history of any natural resource, there was a time when it wasn’t privately owned. What was its status in that state of nature, then?</p>
 
-<p>I see just two reasonable options. Either it was owned by all, or owned by no one. Here I explore both options.</p>
+<p>I see just two reasonable options. Either it was owned by all, or owned by no one<sup class='footnote-number'><a href='#footnote-2'>2</a></sup>. Here I explore both alternatives.</p>
 
 <p>If the commons were owned by all, this means that everyone is co-owner of the commons. This means, by definition, we all have the bundle of rights over all natural resources. What does this mean, in practice? Take an apple tree. By assumption, it’s owned by all. Can I go ahead and take an apple from it, and eat it? At first glance, it would appear so. If it’s owned by all, in particular it’s owned by me. Hence, one may think that I should be able to “use it” (ie eat it) as this is one of the rights of the bundle of rights. However, doing so would infringe the right to use and manage of everyone else: the rest of the people would not be able to eat that apple anymore. Therefore, I will only be able to eat the apple if I get unanimous consent from all other co-owners of the apple tree – ie all of humanity. It also means that I can’t legitimately unilaterally take exclusive ownership of the apple tree without the consent of everyone else – including people that are born later on.</p>
 
@@ -80,6 +80,7 @@
 
 <p>Clearly, the fact that humanity exists means that we all have made illegitimate use of the commons, as per the “owned by all” option. Otherwise, humanity wouldn’t have survived. In this case, humanity is condemned to be immoral as long as it wants to survive.</p><h3>Notes</h3>
 <p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> A.M. Honoré, <i>Ownership</i> (Oxford University Press, 1961).</p>
+<p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> There are other alternatives, but these must be historically posterior to the two alternatives discussed, see E. Ostrom, <i>Governing the commons: The evolution of institutions for collective action</i> (Cambridge university press, 1990).</p>
 
             </section>
         </main>
