codex machina, toc

--- a/maximal-rights/index.html
+++ b/maximal-rights/index.html
@@ -70,9 +70,23 @@
                 
                 <p class="date">15 Apr 2025</p>
 
+<div class='toc'>
+<b>Contents</b>
+	<p class='toc3'><a href='#introduction'>Introduction</a></p>
+	<p class='toc3'><a href='#systems-of-rights'>Systems of rights</a></p>
+	<p class='toc3'><a href='#comparing-systems-of-rights'>Comparing systems of rights</a></p>
+	<p class='toc3'><a href='#maximal-systems-of-rights'>Maximal systems of rights</a></p>
+	<p class='toc3'><a href='#implications-of-non-uniqueness-of-maximal-systems-of-rights'>Implications of non-uniqueness of maximal systems of rights</a></p>
+	<p class='toc4'><a href='#rawlss-principles-of-justice'>Rawls's principles of justice</a></p>
+	<p class='toc4'><a href='#cohens-self-ownership'>Cohen's self-ownership</a></p>
+	<p class='toc3'><a href='#notes'>Notes</a></p>
+	<p class='toc3'><a href='#bibliography'>Bibliography</a></p>
+
+</div>
+
 <p><a target="_blank" href="../assets/maximalrights.pdf">Read PDF version</a></p>
 
-<h3>Introduction</h3>
+<h3 id='introduction'>Introduction</h3>
 
 <p>What rights persons have is a much debated issue in moral and political philosophy. Many schools of thought believe that persons do enjoy certain rights, although there might be disagreement about what these rights are. Despite their differences and caveats, many authors of a liberal or libertarian background have two principles in common in essence: that more rights is preferred to less, and that every person ought to enjoy equal rights. Therefore, it is natural to view that persons ought to enjoy the most extensive system of rights that is logically possible, and compatible with all other persons enjoying the same system of rights. This view is not new. In his <i>A Theory of Justice</i>, John Rawls incorporated this idea into his first principle of justice:</p>
 
@@ -117,7 +131,7 @@
 <p>I do not believe these objections are fatal to the aims of Rawls, Cohen and other authors that have pre-assumed the existence of a maximum system of rights, one that is more extensive than any other. Nevertheless, they do make their claims more logically precise, and I do believe they have implications to their theories that should be considered. I explore some of these implications in the last section. </p>
 
 <p>
-<h3>Systems of rights</h3></p>
+<h3 id='systems-of-rights'>Systems of rights</h3>
 
 <p>The concept of <i>right</i> is often used ambiguously, and different people attach different meanings to it without explicitly explaining what they mean by <i>right</i>. In this article I will use<sup class='footnote-number'><a href='#footnote-7'>7</a></sup> W.N. Hohfeld's<sup class='footnote-number'><a href='#footnote-8'>8</a></sup> two meanings of rights: liberties and claim-rights.<sup class='footnote-number'><a href='#footnote-9'>9</a></sup></p>
 
@@ -150,7 +164,7 @@ As an example, consider the system of rights that grants each person the right n
 
 <p>I will denote by \(\mathcal S\) the set of all systems of rights that are universal. In the following sections I will explore how systems of rights in \(\mathcal S\) relate to each other.</p>
 
-<h3>Comparing systems of rights</h3>
+<h3 id='comparing-systems-of-rights'>Comparing systems of rights</h3>
 
 <p>If we want to discuss the existence of the <i>fullest</i> or <i>most extensive</i> system of rights, we should first be able to compare two systems of rights. Given two systems of rights \(S_1, S_2 \in \mathcal S\), the system \(S_2\) is said to be more <i>extensive</i> than \(S_1\), and denote it by \(S_1 \preceq S_2\), if any \((P, Q, \varphi)\)-claim-right and \((P, \varphi)\)-liberty under the system \(S_1\) is also a right under the system \(S_2\).</p>
 
@@ -168,7 +182,7 @@ As an example, consider the system of rights that grants each person the right n
 
 <p>Therefore, the binary relation \(\preceq\) defines a partial order<sup class='footnote-number'><a href='#footnote-14'>14</a></sup> on the set of all universal systems of rights \(\mathcal S\).</p>
 
-<h3>Maximal systems of rights</h3>
+<h3 id='maximal-systems-of-rights'>Maximal systems of rights</h3>
 
 <p>When considering systems of rights persons can have, it is natural to view that persons should have the most extensive system of rights logically possible: a <i>maximum</i> system of rights, one that is more extensive than any other system of rights. As we have seen, however, the set of systems of rights \(\mathcal S\) is partially ordered but not totally ordered, as not any two systems of rights are comparable. Partially ordered sets do not, in general, have a maximum element. I will now show that this is indeed the case for \(\mathcal S\):</p>
 
@@ -234,9 +248,9 @@ and
 
 <p>Any framework of moral philosophy that builds on the idea that persons have extensive systems of rights should account for the nonexistence of maximum systems of rights, and the non-uniqueness of maximal systems of rights. This includes Rawls's theory of justice and Cohen's conception of self-ownership. Their frameworks must either support the existence of multiple maximal universal systems of rights, or justify why a specific maximal system of rights is chosen over the others.</p>
 
-<h3>Implications of non-uniqueness of maximal systems of rights</h3>
+<h3 id='implications-of-non-uniqueness-of-maximal-systems-of-rights'>Implications of non-uniqueness of maximal systems of rights</h3>
 
-<h4>Rawls's principles of justice</h4>
+<h4 id='rawlss-principles-of-justice'>Rawls's principles of justice</h4>
 
 <p>Recall Rawls's first principle of justice, the principle of greatest equal liberty:</p>
 
@@ -279,7 +293,7 @@ and
 <p>The non-uniqueness of maximal is, therefore, not fatal to Rawls's aims of establishing principles of justice. After a small amendment to his first principle to account for the existence of multiple maximal systems of liberty, his reasoning and results still hold and the resulting principles of justice are logically sound.</p>
 
 <p>
-<h4>Cohen's self-ownership</h4></p>
+<h4 id='cohens-self-ownership'>Cohen's self-ownership</h4>
 
 <p>Cohen appeals to the libertarian tradition of placing great value on freedom and individual rights when he defined self-ownership as “the fullest right a person (logically) can have over herself, provided that each other person has such a right.”<sup class='footnote-number'><a href='#footnote-35'>35</a></sup> The intuition behind such a definition is clear: if more rights over oneself is preferred over less, it is natural to assert that self-ownership consists of the fullest, most extensive of such rights. When asserting this, however, Cohen runs into the same problem as Rawls with his principle of greatest equal liberty: there is no unique fullest system of rights, there are many of them.</p>
 
@@ -297,7 +311,7 @@ and
 
 <p>Cohen's view ultimately fails to establish a unique set of rights that constitutes self-ownership, as it becomes evident that there are multiple, incompatible maximal systems of Cohenian rights and no single right common to all. To address the challenge, Cohen could adopt a teleological approach similar to Rawls's approach discussed in the previous section. His conception of self-ownership yields multiple equally valid systems of rights; there are some that he clearly values over the others, as he viewed them to be the core of self-ownership rights. He could argue on teleological grounds that maximal systems of rights that respect those alleged core rights are preferred over those that don't, thus leading to the conception of self-ownership he favours. This argument, however, is missing from Cohen's work.</p>
 
-<h3>Notes</h3>
+<h3 id='notes'>Notes</h3>
 <p id='footnote-1'><sup class='footnote-number'><a href='#footnote-1'>1</a></sup> J. Rawls, <i>A Theory of Justice</i>, p. 266.</p>
 <p id='footnote-2'><sup class='footnote-number'><a href='#footnote-2'>2</a></sup> G. A. Cohen, <i>Self-ownership, freedom and equality</i>, p. 213f.</p>
 <p id='footnote-3'><sup class='footnote-number'><a href='#footnote-3'>3</a></sup> Ibid., p. 215.</p>
@@ -339,7 +353,7 @@ and
 <p id='footnote-39'><sup class='footnote-number'><a href='#footnote-39'>39</a></sup> Ibid., p. 216ff.</p>
 <p id='footnote-40'><sup class='footnote-number'><a href='#footnote-40'>40</a></sup> Ibid., p. 216.</p>
 
-<h3>Bibliography</h3>
+<h3 id='bibliography'>Bibliography</h3>
 
 <p><bib-author>G.A. Cohen</bib-author>, <i>Self-ownership, freedom and equality</i> (Cambridge University Press, 1995).</p>
 
@@ -364,6 +378,7 @@ and
 <p><bib-author>J. Waldron</bib-author>, <i>The Right to Private Property</i> (Clarendon Press, 1990).</p>
 
 <p><bib-author>M. Zorn</bib-author>, <i>A remark on method in transfinite algebra</i> (Bulletin of the American Mathematical Society, 1935).</p>
+
             </section>
         </main>
 
