--- a/essays/index.html
+++ b/essays/index.html
@@ -66,6 +66,13 @@
                 
                 <h2 id="page-title">Essays</h2>
                 <div class="essay-item">
+                    <div class="essay-date">8 May 2025</div>
+                    <div class="essay-title">
+                        <a href="../codex-machina/">Codex Machina </a>
+                    </div>
+                </div>
+            
+                <div class="essay-item">
                     <div class="essay-date">29 Apr 2025</div>
                     <div class="essay-title">
                         <a href="../selfishness/">Selfishness and Christianity </a>
