--- a/owned-by-all/index.html
+++ b/owned-by-all/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
-        <meta name="description" content="Personal website of Alvaro Rivas">
+        <meta name="description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
         <meta name="keywords" content="Alvaro Rivas, essays, philosophy, politics, linguistics">
         <meta name="author" content="Alvaro Rivas">
 
@@ -12,15 +12,15 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Alvaro Rivas">
-        <meta property="og:description" content="Personal website of Alvaro Rivas">
+        <meta property="og:title" content="Owned by no one, or owned by all?">
+        <meta property="og:description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
         <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Alvaro Rivas">
-        <meta name="twitter:description" content="Personal website of Alvaro Rivas">
+        <meta name="twitter:title" content="Owned by no one, or owned by all?">
+        <meta name="twitter:description" content="Property is an elusive term. In my view, it should be defined as a bundle of rights in the sense of ...">
         <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
