--- a/induction/index.html
+++ b/induction/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
-        <meta name="description" content="Personal website of Alvaro Rivas">
+        <meta name="description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
         <meta name="keywords" content="Alvaro Rivas, essays, philosophy, politics, linguistics">
         <meta name="author" content="Alvaro Rivas">
 
@@ -12,15 +12,15 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <meta property="og:title" content="Alvaro Rivas">
-        <meta property="og:description" content="Personal website of Alvaro Rivas">
+        <meta property="og:title" content="On induction ">
+        <meta property="og:description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
         <!--<meta property="og:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
         <meta property="og:url" content="https://rivas-alvaro.github.io/">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Alvaro Rivas">
-        <meta name="twitter:description" content="Personal website of Alvaro Rivas">
+        <meta name="twitter:title" content="On induction ">
+        <meta name="twitter:description" content="In his essay by the same name1, Russell uses what I believe is, probably, the best example of the us...">
         <!--<meta name="twitter:image" content="https://rivas-alvaro.github.io/assets/preview.png">-->
         <meta name="twitter:url" content="https://rivas-alvaro.github.io/">
 
