--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
         <footer>
             <p>Alvaro Rivas</p>
         </footer>
-       
+
+        <!-- Scroll up button -->
+        <button id="backToTopBtn" title="Go to top" aria-label="Back to top">
+          <svg viewBox="0 0 24 24" width="16" height="16" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="6 15 12 9 18 15"/>
+          </svg>
+        </button>
+
+        <script src="./js/scroll.js"></script>
     </body>
 </html>
