--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
         <link
         rel="icon"
         type="image/png"
-        href="./assets/favicon.png"
+        href="/assets/favicon.png"
         sizes="128x128"
         />
 
         <title>Alvaro Rivas</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
         
     </head>
     <body>
         <header>
-            <h1><a href="./">Alvaro Rivas</a></h1>
+            <h1><a href="/">Alvaro Rivas</a></h1>
             <nav>
                 <ul>
-                    <li><a href="./" class="active">HOME</a></li>
-                    <li><a href="./books/" class="li-books">BOOKS</a></li>
-                    <li><a href="./essays" class="li-essays">ESSAYS</a></li>
-                    <li><a href="./projects" class="li-projects">SIDE PROJECTS</a></li>
+                    <li><a href="/" class="active">HOME</a></li>
+                    <li><a href="/books/" class="li-books">BOOKS</a></li>
+                    <li><a href="/essays" class="li-essays">ESSAYS</a></li>
+                    <li><a href="/projects" class="li-projects">SIDE PROJECTS</a></li>
                 </ul>
             </nav>
         </header>
@@ -83,6 +83,6 @@
           </svg>
         </button>
 
-        <script src="./js/scroll.js"></script>
+        <script src="/js/scroll.js"></script>
     </body>
 </html>
