--- a/books/index.html
+++ b/books/index.html
@@ -39,23 +39,23 @@
         <link
         rel="icon"
         type="image/png"
-        href="../assets/favicon.png"
+        href="/assets/favicon.png"
         sizes="128x128"
         />
 
         <title>Books</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
         
     </head>
     <body>
         <header>
-            <h1><a href="../">Alvaro Rivas</a></h1>
+            <h1><a href="/">Alvaro Rivas</a></h1>
             <nav>
                 <ul>
-                    <li><a href="../" class="li-home">HOME</a></li>
-                    <li><a href="../books/" class="active">BOOKS</a></li>
-                    <li><a href="../essays" class="li-essays">ESSAYS</a></li>
-                    <li><a href="../projects" class="li-projects">SIDE PROJECTS</a></li>
+                    <li><a href="/" class="li-home">HOME</a></li>
+                    <li><a href="/books/" class="active">BOOKS</a></li>
+                    <li><a href="/essays" class="li-essays">ESSAYS</a></li>
+                    <li><a href="/projects" class="li-projects">SIDE PROJECTS</a></li>
                 </ul>
             </nav>
         </header>
@@ -69,7 +69,7 @@
             <div class='book-upcoming'><span>Upcoming</span></div>
                 <div class="book-item">
                     <div class="book-cover">
-                        <img src="../assets/calculated_bliss.png" alt="Calculated Bliss" />
+                        <img src="/assets/calculated_bliss.png" alt="Calculated Bliss" />
                     </div>
                     <div class="book-info">
                         <div class="book-description">
@@ -98,6 +98,6 @@
           </svg>
         </button>
 
-        <script src="../js/scroll.js"></script>
+        <script src="/js/scroll.js"></script>
     </body>
 </html>
