--- a/projects/index.html
+++ b/projects/index.html
@@ -39,23 +39,23 @@
         <link
         rel="icon"
         type="image/png"
-        href="../assets/favicon.png"
+        href="/assets/favicon.png"
         sizes="128x128"
         />
 
         <title>Side projects</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
         
     </head>
     <body>
         <header>
-            <h1><a href="../">Alvaro Rivas</a></h1>
+            <h1><a href="/">Alvaro Rivas</a></h1>
             <nav>
                 <ul>
-                    <li><a href="../" class="li-home">HOME</a></li>
-                    <li><a href="../books/" class="li-books">BOOKS</a></li>
-                    <li><a href="../essays" class="li-essays">ESSAYS</a></li>
-                    <li><a href="../projects" class="active">SIDE PROJECTS</a></li>
+                    <li><a href="/" class="li-home">HOME</a></li>
+                    <li><a href="/books/" class="li-books">BOOKS</a></li>
+                    <li><a href="/essays" class="li-essays">ESSAYS</a></li>
+                    <li><a href="/projects" class="active">SIDE PROJECTS</a></li>
                 </ul>
             </nav>
         </header>
@@ -68,7 +68,7 @@
                 <div class="project-item">
                     <div class="project-image">
                         <a href="https://rivas-alvaro.github.io/wikiloop">
-                            <img src="../assets/wikiloop.png" alt="Wikiloop" />
+                            <img src="/assets/wikiloop.png" alt="Wikiloop" />
                         </a>
                     </div>
                     <div class="project-info">
@@ -95,6 +95,6 @@
           </svg>
         </button>
 
-        <script src="../js/scroll.js"></script>
+        <script src="/js/scroll.js"></script>
     </body>
 </html>
